--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - name: baixar o código
         uses: actions/checkout@v4
-      - name: gerar o jar
+      - name: configurando o jar
         uses: actions/setup-java@v5
         with:
           java-version: 21
           distribution: 'oracle'
       - name: executar o maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
