antes de ctrl c v

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api
-spring.datasource.url=jdbc:postgresql://localhost:5432/api
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${BD_URL}
+spring.datasource.username=${BD_USERNAME}
+spring.datasource.password=${BD_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuracao do JPA / Hibernate
