--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -1,3 +1,4 @@
+#script para automacao no github
 name: AutoService SB construcao e teste
 
 on:
@@ -8,12 +9,27 @@ jobs:
   construir:
     runs-on: ubuntu-latest
     steps:
-      - name: baixar o código
+      - name: baixar o codigo
         uses: actions/checkout@v4
-      - name: configurando o jar
+      - name: configurando o java
         uses: actions/setup-java@v5
         with:
           java-version: 21
           distribution: 'oracle'
-      - name: executar o maven
+      - name: executar maven
         run: mvn clean install -DskipTests
+      - name: gerando docker
+        run: docker build -t proffernando/autoservicesb .
+      - name: login dockerHub
+        run: docker login -u ${{secrets.DOCKER_USER}} -p '${{secrets.DOCKER_PASS}}'
+      - name: publicar a imagem
+        run: docker push proffernando/autoservicesb
+ # instalacao_aws:
+  #  runs-on: self-hosted
+   # needs: construir
+    #steps:
+     # - name: pegar imagem
+      #  run: sudo docker pull proffernando/autoservicesb
+      #- name: executar container
+        #run: sudo docker run -t containerapp proffernando/autoservicesb
+       # run: sudo docker compose up -d
