--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -19,11 +19,11 @@ jobs:
       - name: executar maven
         run: mvn clean install -DskipTests
       - name: gerando docker
-        run: docker build -t proffernando/autoservicesb .
+        run: docker build -t gdsf7/autoservicesb .
       - name: login dockerHub
         run: docker login -u ${{secrets.DOCKER_USER}} -p '${{secrets.DOCKER_PASS}}'
       - name: publicar a imagem
-        run: docker push proffernando/autoservicesb
+        run: docker push gdsf7/autoservicesb
  # instalacao_aws:
   #  runs-on: self-hosted
    # needs: construir
