--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   autoservicesb_api:
-    image: gdsf7/autoservicesb
+    image: gutenbergz/autoservicesb
     ports:
       - "80:8080"
     depends_on:
