--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -19,17 +19,33 @@ jobs:
       - name: executar maven
         run: mvn clean install -DskipTests
       - name: gerando docker
-        run: docker build -t gdsf7/autoservicesb .
+        run: docker build -t proffernando/autoservicesb .
       - name: login dockerHub
         run: docker login -u ${{secrets.DOCKER_USER}} -p '${{secrets.DOCKER_PASS}}'
       - name: publicar a imagem
-        run: docker push gdsf7/autoservicesb
- # instalacao_aws:
-  #  runs-on: self-hosted
-   # needs: construir
-    #steps:
-     # - name: pegar imagem
-      #  run: sudo docker pull proffernando/autoservicesb
-      #- name: executar container
-        #run: sudo docker run -t containerapp proffernando/autoservicesb
-       # run: sudo docker compose up -d
+        run: docker push proffernando/autoservicesb
+  instalacao_aws:
+    runs-on: self-hosted
+    needs: construir
+    steps:
+      - name: pegar imagem
+        run: sudo docker pull proffernando/autoservicesb
+      - name: baixar o docker compose
+        uses: actions/checkout@v4
+      - name: gerar arquivo de .env
+        run: |
+          cat > .env << 'EOF'
+          BD_URL=${{secrets.BD_URL}}
+          BD_USERNAME=${{secrets.BD_USERNAME}}
+          BD_PASSWORD=${{secrets.PASSWORD}}
+          POSTGRES_USER={{secrets.PG_USER}}
+          POSTGRES_PASSWORD={{secrets.PG_PASS}}
+          POSTGRES_DB={{secrets.PG_BD}}
+          EOF
+      - name: executar container
+        #        run: sudo docker run -t proffernando/autoservicesb
+        run: sudo docker compose up -d --remove-orphans
+
+        postgres
+        autoservicesb-senha
+        autoservicesb
