--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,23 @@
 services:
   autoservicesb_api:
-    image: gutenbergz/autoservicesb
+    image: proffernando/autoservicesb
     ports:
       - "80:8080"
     depends_on:
-      - servidor_banco
-  servidor_banco:
+      - servico_banco
+    networks:
+      - autoservicesbnet
+  servico_banco:
     image: postgres:17.2
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: autoservicesb-senha
-      POSTGRES_DB: autoservicesb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - pgdata:/home/ubuntu/dados
+    networks:
+      - autoservicesbnet
+networks:
+  autoservicesbnet:
+volumes:
+  pgdata:
