--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=${BD_USERNAME}
 spring.datasource.password=${BD_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuracao do JPA / Hibernate
+# Configuracao do JPA / Hibernat
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
